# rust-all-in-one

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .mdbookignore  404.html  Cargo.toml  Makefile  README.md  TEMPLATE.html  actions.yml  alloc.plot  alloc.tsv  book.toml  git-push.sh  hello.txt  index.html  package-lock.json  print.html  pyproject.toml  requirements.txt  rust-all-in-one.code-workspace  rust-toolchain.toml  rust.json  rust_all_in_one  searchindex.js  searchindex.json  tarpaulin-report.html  tarpaulin.toml  workspace_rust-all-in-one.code-workspace
.codecov/: codecov.yml
.github/: git-push.sh
.github/workflows/: .travis.yml  actions.yml  build-and-test.yml  ci.yml  codecov.yml  coverage.yml  pages-deploy.yml  publish.yml  rust.yml  tarpaulin.yml  test-codecov.yml
algorithm/: ALGORITHM.html
benchmark/: BENCHMARK.html
book/: 404.html  TEMPLATE.html  index.html  print.html  searchindex.js  searchindex.json
book/algorithm/: ALGORITHM.html
book/benchmark/: BENCHMARK.html
book/borrowchecker/: BORROWCHECKER.html
book/brain-teaser/: BRAIN_TREASER.html
book/collection/: COLLECTION.html
book/commandline/: COMMANDLINE.html
book/cpu/: CPU.html
book/data/: DATA.html
book/duplication/: Duplication.html
book/errorhandling/: ERROR_HANDLING.html
book/errorhandling/recoverable/educative/: Cargo.toml
book/errorhandling/recoverable/educative/src/: educative-error-handling-main.rs
book/feature/: FEATURE.html
book/flowcontrol/: FLOWCONTROL.html
book/functional-programming/: FUNC-PROG.html
book/grammer/: GRAMMER.html
book/idioms/: IDIOMS.html
book/libc/: LIBC.html
book/macro/: MACRO.html
book/memory/: MEMORY.html
book/module/: MODULE.html
book/network/: NETWORK.html
book/oop/: OOP.html
book/pointers/: POINTERS.html
book/process/: PROCESS.html
book/questions/: QUESTIONS.html
book/rust/: RUST.html
book/shared/: SHARED.html
book/stdmisc/: STDMISC.html
book/tests/: TESTS.html
book/thread/: THREAD.html
book/time/: TIME.html
book/trait/: TRAIT.html
book/types/: M_TYPES.html
book/unsafe/: UNSAFE.html
borrowchecker/: BORROWCHECKER.html
borrowchecker/lifetime/: LIFETIME.html
borrowchecker/semantic/: SEMANTIC.html
brain-teaser/: BRAIN_TREASER.html
brain-teaser/educative/: Cargo.toml
collection/: COLLECTION.html
collection/hashmap/: HASHMAP.html
collection/slice/: SLICE.html
collection/vec/: VECTOR.html
commandline/: COMMANDLINE.html
cpu/: CPU.html
data/: DATA.html
data/arithmetic/: ARITHMETIC.html
data/convert/: CONVERT.html
data/io/: IO.html
data/operator/: OPERATOR.html
data/regex/: REGEX.html
data/serde/: SERDE.html
docker/: Dockerfile  build_docker.sh  run_docker.sh
duplication/: Duplication.html
duplication/copy-clone/: COPY-CLONE.html
errorhandling/: ERROR_HANDLING.html
errorhandling/non-recoverable/: ERROR_NONRECOVERABLE.html
feature/: FEATURE.html
flowcontrol/: FLOWCONTROL.html
flowcontrol/for/: FOR.html
flowcontrol/loop/: LOOP.html
flowcontrol/match/: MATCH.html
flowcontrol/while/: WHILE.html
functional-programming/: FUNC-PROG.html
functional-programming/closure/: CLOSURE.html
functional-programming/function/: FUNCTION.html
functional-programming/lazy/: LAZY.html
grammer/: GRAMMER.html
idioms/: IDIOMS.html
libc/: LIBC.html
libc/code-like-pro/: Cargo.toml
macro/: MACRO.html
memory/: MEMORY.html
memory/allocator/: ALLOCATOR.html
memory/other/: Cargo.toml
memory/piston/: PISTON.html
memory/piston/rust-in-action/: Cargo.toml
module/: MODULE.html
network/: NETWORK.html
oop/: OOP.html
oop/design_patterns/: DESIGN_PATTERN.html
oop/trait/: TRAIT.html
pointers/: POINTERS.html
pointers/rust-doc/: Cargo.toml
pointers/smartpointer/: SMARTPOINTER.html
process/: PROCESS.html
questions/: QUESTIONS.html
rust/: RUST.html
shared/: SHARED.html
src/: main.rs
stdmisc/: STDMISC.html
tests/: TESTS.html
tests/tests_samples/test_binary/: Cargo.toml
tests/tests_samples/test_binary/src/: test_binary-main.rs
thread/: THREAD.html
time/: TIME.html
trait/: TRAIT.html
types/: M_TYPES.html
types/rhs/: RHS.html
unsafe/: UNSAFE.html
workspace/: SUMMARY.md  TEMPLATE.md  WORKSPACE.md  ________WORKSPACE________.md  _____________WORKSPACE__________.md  book.toml
workspace/benchmark/criterion/criterion_doc/: Cargo.toml
workspace/benchmark/criterion/criterion_doc/benches/: fibonacci.rs
workspace/benchmark/criterion/master-rust/: Cargo.toml
workspace/benchmark/criterion/master-rust/.criterion/fibonacci 8/new/: estimates.json  sample.json  tukey.json
workspace/benchmark/criterion/master-rust/benches/: fibonacci.rs
workspace/benchmark/criterion/master-rust/src/: lib.rs
workspace/data/regex/rust-in-action/: Cargo.toml  ria-regex.md
workspace/data/regex/rust-in-action/src/: rust-in-action-data-regex-main.rs
workspace/errorhandling/recoverable/rust-doc/: Cargo.toml  rd-errorhandling.md
workspace/feature/doc-rust/mod_draw_bin/: Cargo.toml
workspace/feature/other/rust-features-language/: Cargo.toml
workspace/feature/other/rust-features-language/french-linguistic-pkg/: Cargo.toml
workspace/feature/other/rust-features-language/src/: feature-language-main.rs  main.rs
workspace/feature/other/rust-features-language_bin/: Cargo.toml
workspace/feature/rust-doc/draw/mod_draw_bin/: Cargo.toml
workspace/feature/rust-doc/draw/mod_draw_bin/src/: mod-draw-main.rs
workspace/feature/rust-doc/draw/mod_draw_lib/: Cargo.toml
workspace/macro/educative/: Cargo.toml
workspace/macro/educative/src/: educative-macro-handling-main.rs
workspace/memory/winapi/rust-in-action/: Cargo.toml
workspace/memory/winapi/rust-in-action/src/: rust-in-action-memory-winapi-main.rs
workspace/module/rust-egg/: Cargo.toml
workspace/tests/test_dependent/: Cargo.toml
workspace/tests/test_dependent/src/: test_dependent-main.rs
workspace/tests/test_dependent/test/: integration_dep_test.rs
workspace/tests/test_dependent/test/common/: adder.rs  mod.rs
workspace/thread/unsafe/rust-in-action/: Cargo.toml  UNSAFE-THREAD.md
(+1305 files in other folders)
