[package]
name = "rust-all-in-one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [


    "workspace/shared",

    "workspace/documentation/knoldus/knoldus_bin",
    "workspace/documentation/knoldus/knoldus_lib",

    "workspace/feature/rust-doc/mod_draw_bin",
    "workspace/feature/rust-doc/mod_draw_lib",
    "workspace/feature/code-like-pro/dryoc_bin",

    "workspace/data/serde/candle_dev",
    "workspace/data/operator/master-rust",
    "workspace/data/rust-in-action/csv_bin",
    "workspace/data/regex/rust-in-action",
    "workspace/data/random/rust-in-action",
    "workspace/data/convert/try_into/rust-in-action",
    "workspace/data/convert/generic/as_ref/rust-in-action",
    "workspace/data/convert/generic/into/rust-in-action",
    "workspace/data/convert/text_to_enum/rust-in-action",
    "workspace/data/io/file/rust-in-action",
    "workspace/data/io/io/rust-in-action",
    "workspace/data/convert/trait/from/rust-egg",
    "workspace/data/convert/try_from/rust-egg",
    "workspace/borrowchecker/lifetime/elision/rust-doc",
    "workspace/borrowchecker/lifetime/elision/rust-in-action",
    "workspace/borrowchecker/semantic/rust-in-action",
    "workspace/borrowchecker/semantic/educative",
    "workspace/borrowchecker/semantic/master-rust",
    "workspace/borrowchecker/lifetime/static/rust-in-action",
    "workspace/borrowchecker/lifetime/static/pnkfx",
    "workspace/borrowchecker/lifetime/static/packtpub",
    "workspace/borrowchecker/lifetime/static/rust-egg",
    "workspace/borrowchecker/lifetime/static/rust-doc",
    "workspace/borrowchecker/lifetime/dangling/educative",
    "workspace/borrowchecker/lifetime/dangling/rust-doc",
    "workspace/borrowchecker/lifetime/dangling/rust-egg",
    "workspace/borrowchecker/lifetime/dangling/rust-in-action",
    "workspace/borrowchecker/lifetime/generic/master-rust",

    "workspace/thread/race/rust-in-action",


    "workspace/types/union/master-rust",
    "workspace/types/enum/packtpub",
    "workspace/types/enum/rust-egg",
    "workspace/types/enum/rust-in-action",
    "workspace/types/enum/rust-doc",
    "workspace/types/enum/master-rust",
    "workspace/types/struct/master-rust",
    "workspace/types/struct/rust-doc",
    "workspace/types/struct/rust-egg",
    "workspace/types/return/rust-egg",
    "workspace/types/return/packpub",
    "workspace/types/rhs/rust-in-action",
    "workspace/types/rhs/master-rust",
    "workspace/types/rhs/rust-doc",
    "workspace/types/generic/pnkfx",
    "workspace/types/generic/rust-doc",
    "workspace/types/generic/master-rust",
    "workspace/types/primitive/float/rust-in-action",
    "workspace/types/primitive/char/rust-egg",
    "workspace/types/primitive/array/rust-egg",
    "workspace/types/primitive/array/rust-in-action",
    "workspace/types/primitive/tuple/rust-egg",
    "workspace/types/primitive/int/code-like-a-pro",
    "workspace/types/primitive/int/rust-in-action",
    "workspace/types/primitive/int/num/rust-in-action",
    "workspace/types/num/from/rust-in-action",
    "workspace/types/primitive/operator/rust-in-action",
    "workspace/types/static/master-rust",
    "workspace/types/string/master-rust",
    "workspace/types/string/rust-doc",
    "workspace/types/string/rust-egg",
    "workspace/types/string/packtpub",
    "workspace/types/string/rust-in-action",
    "workspace/types/string/code-like-a-pro",
    "workspace/types/primitive/radix/rust-in-action",
    "workspace/types/complex/num/rust-in-action",


    "workspace/trait/associate-type-or-trait/rust-doc",
    "workspace/trait/associate-type-or-trait/rust-egg",
    "workspace/trait/associate-type-or-trait/rust-in-action",
    "workspace/trait/associate-type-or-trait/master-rust",
    "workspace/trait/inheritance/master-rust",
    "workspace/trait/shared-behavior/trait-bound/master-rust",
    "workspace/trait/shared-behavior/trait-bound/operator/master-rust",
    "workspace/trait/shared-behavior/aggregator/rust-doc",
    "workspace/trait/shared-behavior/builtin-trait/master-rust",
    "workspace/trait/shared-behavior/safe-object/non-dispatchable/rust-doc",
    "workspace/trait/shared-behavior/safe-object/dispatchable/master-rust",
    "workspace/trait/shared-behavior/non-objectsafe/rust-doc",
    "workspace/trait/shared-behavior/trait-bound/educative",

    "workspace/flowcontrol/loop/master-rust",
    "workspace/flowcontrol/loop/rust-in-action",
    "workspace/flowcontrol/loop/packtpub",
    "workspace/flowcontrol/for/rust-in-action",
    "workspace/flowcontrol/match/rust-doc",
    "workspace/flowcontrol/match/rust-in-action",
    "workspace/flowcontrol/while/rust-in-action",
    "workspace/flowcontrol/pnfx-flowcontrol",

    "workspace/collection/btreemap/packtpub/packtpub_lib",
    "workspace/collection/btreemap/packtpub/packtpub_bin",
    "workspace/collection/iterator/rust-egg",
    "workspace/collection/iterator/pnkfx",
    "workspace/collection/iterator/rust-doc",
    "workspace/collection/iterator/master-rust",
    "workspace/collection/vec/rust-in-action",
    "workspace/collection/hashmap/master-rust",
    "workspace/collection/hashmap/rust-in-action",
    "workspace/collection/hashmap/code-like-pro",
    "workspace/collection/slice/master-rust",
    "workspace/collection/slice/rust-egg",
    "workspace/collection/slice/rust-doc",
    "workspace/collection/slice/rust-in-action",
    "workspace/collection/slice/code-like-pro",
    "workspace/collection/slice/pnkfx",

    "workspace/commandline/rust-in-action",

    "workspace/errorhandling/recoverable/rust-in-action",
    "workspace/errorhandling/recoverable/code-like-pro",
    "workspace/errorhandling/recoverable/educative",
    "workspace/errorhandling/recoverable/riptutorial",
    "workspace/errorhandling/recoverable/rust-doc",
    "workspace/errorhandling/recoverable/rust-egg",
    "workspace/errorhandling/recoverable/master-rust",
    "workspace/errorhandling/non-recoverable/master-rust",


    "workspace/duplication/copy-clone/pnkfx",
    "workspace/duplication/copy-clone/rust-in-action",
    "workspace/duplication/rc/rust-in-action",

    "workspace/memory/size/master-rust",
    "workspace/memory/piston/rust-in-action",
    "workspace/memory/winapi/rust-in-action",


    "workspace/pointers/smartpointer/runtime/shared_mutability/ref-cell/master-rust",
    "workspace/pointers/smartpointer/compiletime/shared_owner/rc/linkedlist/packtpub",
    "workspace/pointers/smartpointer/compiletime/shared_owner/rc/linkedlist/pnkfx",
    "workspace/pointers/smartpointer/compiletime/shared_owner/rc/linkedlist/rust-doc",
    "workspace/pointers/smartpointer/compiletime/shared_owner/rc/linkedlist/master-rust",
    "workspace/pointers/smartpointer/compiletime/box/master-rust",
    "workspace/pointers/smartpointer/compiletime/box/rust-in-action",
    "workspace/pointers/smartpointer/compiletime/master-rust",
    "workspace/pointers/rust-in-action",

    "workspace/functional-programming/expression/rust-doc",
    "workspace/functional-programming/closure/rust-doc",
    "workspace/functional-programming/closure/easyrust",
    "workspace/functional-programming/closure/pnkfx",
    "workspace/functional-programming/closure/master-rust",
    "workspace/functional-programming/function/master-rust",
    "workspace/functional-programming/function/rust-doc",
    "workspace/functional-programming/function/rust-egg",
    "workspace/functional-programming/lazy/master-rust",
    "workspace/functional-programming/lazy/rust-doc",

    "workspace/benchmark/master-rust",
    "workspace/benchmark/criterion/master-rust",
    "workspace/benchmark/criterion/criterion_doc",


    "workspace/macro/educative",

    "workspace/data/arithmetic/code-like-pro",
    "workspace/data/arithmetic/master-rust",

    "workspace/grammer/dtolnay",

]
