[package]
name = "rust-all-in-one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [


    "workspace/shared",


#   "workspace/algorithm/graph/clique",
#
#   "workspace/documentation/knoldus/knoldus_bin",
#   "workspace/documentation/knoldus/knoldus_lib",
#
#   "workspace/feature/rust-doc/mod_draw_bin",
#   "workspace/feature/rust-doc/mod_draw_lib",
#   "workspace/feature/code-like-pro/dryoc_bin",
#
#   "workspace/data/serde/candle_dev",
#   "workspace/data/operator/master-rust",
#   "workspace/data/rust-in-action/csv_bin",
#   "workspace/data/regex/rust-in-action",
#   "workspace/data/random/rust-in-action",
#   "workspace/data/convert/try_into/rust-in-action",
#   "workspace/data/convert/generic/as_ref/rust-in-action",
#   "workspace/data/convert/generic/as_ref/rust-egg",
#   "workspace/data/convert/generic/into/rust-in-action",
#   "workspace/data/convert/text_to_enum/rust-in-action",
#   "workspace/data/io/file/rust-in-action",
#   "workspace/data/io/file/packtpub",
#   "workspace/data/io/io/rust-in-action",
#   "workspace/data/convert/as/rust-doc",
#   "workspace/data/convert/trait/as/rust-doc",
#   "workspace/data/convert/trait/from/rust-egg",
#   "workspace/data/convert/try_from/rust-egg",
#   "workspace/data/convert/try_from/rust-egg",
#   "workspace/data/convert/to_string_in_fmt/rust-doc",
#   "workspace/data/convert/from/rust-doc",
#   "workspace/data/convert/parse/rust-doc",
#   "workspace/data/average/rust-egg",
#   "workspace/borrowchecker/ownership/packtpub",
#   "workspace/borrowchecker/ownership/pnkfx",
#   "workspace/borrowchecker/ownership/rust-egg",
#   "workspace/borrowchecker/lifetime/elision/rust-doc",
#   "workspace/borrowchecker/lifetime/elision/rust-in-action",
#   "workspace/borrowchecker/semantic/move/rust-egg",
#   "workspace/borrowchecker/semantic/rust-in-action",
#   "workspace/borrowchecker/semantic/educative",
#   "workspace/borrowchecker/semantic/master-rust",
#   "workspace/borrowchecker/lifetime/static/rust-in-action",
#   "workspace/borrowchecker/lifetime/static/pnkfx",
#   "workspace/borrowchecker/lifetime/static/packtpub",
#   "workspace/borrowchecker/lifetime/static/rust-egg",
#   "workspace/borrowchecker/lifetime/static/rust-doc",
#   "workspace/borrowchecker/lifetime/dangling/educative",
#   "workspace/borrowchecker/lifetime/dangling/rust-doc",
#   "workspace/borrowchecker/lifetime/dangling/rust-egg",
#   "workspace/borrowchecker/lifetime/dangling/rust-in-action",
#   "workspace/borrowchecker/lifetime/generic/master-rust",
#   "workspace/borrowchecker/lifetime/generic/rust-doc",
#
#
#   "workspace/stdmisc/rust-doc",
#   "workspace/thread/threadpool/packtpub",
#   "workspace/thread/unsafe/rust-in-action",
#   "workspace/thread/rayon/rust-doc",
#   "workspace/thread/rayon/packtpub",
#   "workspace/thread/time/rust-in-action",
#   "workspace/thread/time/packtpub",
#   "workspace/thread/race/rust-in-action",
#   "workspace/thread/mpsc/rust-in-action",
#   "workspace/thread/mpsc/pnkfx",
#   "workspace/thread/mpsc/rust-doc",
#   "workspace/thread/mpsc/packtpub",
#   "workspace/thread/sync/rust-egg",
#   "workspace/thread/sync/packtpub",
#   "workspace/thread/sharestate/rust-doc",
#
#
#   "workspace/types/var/educative",
#   "workspace/types/compound/array/educative",
#   "workspace/types/compound/array/rust-egg",
#   "workspace/types/compound/array/rust-in-action",
#   "workspace/types/compound/tuple/rust-egg",
#   "workspace/types/compound/tuple/rust-doc",
#   "workspace/types/compound/tuple/code-like-pro",
#   "workspace/types/compound/option/rust-egg",
#   "workspace/types/compound/union/master-rust",
#   "workspace/types/compound/enum/educative",
#   "workspace/types/compound/enum/packtpub",
#   "workspace/types/compound/enum/rust-egg",
#   "workspace/types/compound/enum/rust-in-action",
#   "workspace/types/compound/enum/rust-doc",
#   "workspace/types/compound/enum/master-rust",
#   "workspace/types/compound/struct/master-rust",
#   "workspace/types/compound/struct/rust-doc",
#   "workspace/types/compound/struct/rust-egg",
#   "workspace/types/compound/struct/packtpub",
#   "workspace/types/compound/struct/educative",
#   "workspace/types/return/rust-egg",
#   "workspace/types/return/packpub",
#   "workspace/types/rhs/rust-in-action",
#   "workspace/types/rhs/master-rust",
#   "workspace/types/rhs/rust-doc",
#   "workspace/types/generic/pnkfx",
#   "workspace/types/generic/rust-doc",
#   "workspace/types/generic/educative",
#   "workspace/types/generic/master-rust",
#   "workspace/types/static/master-rust",
#   "workspace/types/mscal/numeric/primitive/float/rust-in-action",
#   "workspace/types/mscal/numeric/primitive/int/code-like-a-pro",
#   "workspace/types/mscal/numeric/primitive/int/rust-in-action",
#   "workspace/types/mscal/numeric/primitive/int/num/rust-in-action",
#   "workspace/types/mscal/numeric/num/bigrational/other",
#   "workspace/types/mscal/numeric/num/bigint/other",
#   "workspace/types/mscal/numeric/num/from/rust-in-action",
#   "workspace/types/mscal/numeric/primitive/radix/rust-in-action",
#   "workspace/types/mscal/numeric/num/complex/rust-in-action",
#   "workspace/types/mscal/non_numeric/char/rust-egg",
#   "workspace/types/mscal/non_numeric/string/other",
#   "workspace/types/mscal/non_numeric/string/rust-doc",
#   "workspace/types/mscal/non_numeric/string/rust-egg",
#   "workspace/types/mscal/non_numeric/string/packtpub",
#   "workspace/types/mscal/non_numeric/string/rust-in-action",
#   "workspace/types/mscal/non_numeric/string/code-like-a-pro",
#   "workspace/types/mscal/non_numeric/string/master-rust",
#
#   "workspace/trait/associate-type-or-trait/educative",
#   "workspace/trait/associate-type-or-trait/rust-doc",
#   "workspace/trait/associate-type-or-trait/rust-egg",
#   "workspace/trait/associate-type-or-trait/rust-in-action",
#   "workspace/trait/associate-type-or-trait/master-rust",
#   "workspace/trait/inheritance/master-rust",
#   "workspace/trait/inheritance/rust-doc",
#   "workspace/trait/shared-behavior/trait-bound/rust-doc",
#   "workspace/trait/shared-behavior/trait-bound/educative",
#   "workspace/trait/shared-behavior/trait-bound/master-rust",
#   "workspace/trait/shared-behavior/trait-bound/operator/rust-doc",
#   "workspace/trait/shared-behavior/trait-bound/operator/master-rust",
#   "workspace/trait/shared-behavior/aggregator/rust-doc",
#   "workspace/trait/shared-behavior/builtin-trait/master-rust",
#   "workspace/trait/built-in/display/rust-in-action",
#   "workspace/trait/built-in/partialeq/rust-egg",
#   "workspace/trait/built-in/partialeq/other",
#   "workspace/trait/built-in/partialeq/educative",
#   "workspace/trait/shared-behavior/safe-object/non-dispatchable/rust-doc",
#   "workspace/trait/shared-behavior/safe-object/dispatchable/master-rust",
#   "workspace/trait/shared-behavior/safe-object/dispatchable/rust-doc",
#   "workspace/trait/shared-behavior/safe-object/dispatchable/other",
#   "workspace/trait/shared-behavior/none-object-safe/rust-doc",
#
#
#   "workspace/flowcontrol/concise_control/rust-doc",
#   "workspace/flowcontrol/loop/master-rust",
#   "workspace/flowcontrol/loop/rust-in-action",
#   "workspace/flowcontrol/loop/packtpub",
#   "workspace/flowcontrol/for/educative",
#   "workspace/flowcontrol/for/rust-in-action",
#   "workspace/flowcontrol/match/rust-doc",
#   "workspace/flowcontrol/match/rust-in-action",
#   "workspace/flowcontrol/while/rust-in-action",
#   "workspace/flowcontrol/while/educative",
#   "workspace/flowcontrol/pnfx-flowcontrol",
#
#
#   "workspace/collection/btreemap/packtpub/packtpub_lib",
#   "workspace/collection/btreemap/packtpub/packtpub_bin",
#   "workspace/collection/iterator/rust-egg",
#   "workspace/collection/iterator/pnkfx",
#   "workspace/collection/iterator/rust-doc",
#   "workspace/collection/iterator/master-rust",
#   "workspace/collection/vec/educative",
#   "workspace/collection/vec/rust-in-action",
#   "workspace/collection/hashmap/educative",
#   "workspace/collection/hashmap/master-rust",
#   "workspace/collection/hashmap/rust-in-action",
#   "workspace/collection/hashmap/code-like-pro",
#   "workspace/collection/slice/educative",
#   "workspace/collection/slice/master-rust",
#   "workspace/collection/slice/rust-egg",
#   "workspace/collection/slice/rust-doc",
#   "workspace/collection/slice/rust-in-action",
#   "workspace/collection/slice/code-like-pro",
#   "workspace/collection/slice/pnkfx",
#
#   "workspace/commandline/rust-in-action",
#
#   "workspace/errorhandling/recoverable/rust-in-action",
#   "workspace/errorhandling/recoverable/code-like-pro",
#   "workspace/errorhandling/recoverable/educative",
#   "workspace/errorhandling/recoverable/riptutorial",
#   "workspace/errorhandling/recoverable/rust-doc",
#   "workspace/errorhandling/recoverable/rust-egg",
#   "workspace/errorhandling/recoverable/master-rust",
#   "workspace/errorhandling/non-recoverable/master-rust",
#
#
#   "workspace/duplication/copy-clone/educative",
#   "workspace/duplication/copy-clone/pnkfx",
#   "workspace/duplication/copy-clone/rust-in-action",
#   "workspace/duplication/copy-clone/rust-doc",
#   "workspace/duplication/rc/rust-in-action",
#
#   "workspace/memory/size/master-rust",
#   "workspace/memory/piston/rust-in-action",
#   "workspace/memory/winapi/rust-in-action",
#   "workspace/memory/allocator/code-like-pro",
#
#   "workspace/pointers/smartpointer/ops/easy-rust",
#   "workspace/pointers/smartpointer/ops/rust-doc",
#   "workspace/pointers/smartpointer/runtime/shared_mutability/ref-cell/master-rust",
#   "workspace/pointers/smartpointer/runtime/shared_mutability/ref-cell/rust-doc",
#   "workspace/pointers/smartpointer/customized/rust-doc",
#   "workspace/pointers/smartpointer/compiletime/cow/code-like-pro",
#   "workspace/pointers/smartpointer/compiletime/box/customized/rust-doc",
#   "workspace/pointers/smartpointer/compiletime/shared_owner/rc/rust-in-action",
#   "workspace/pointers/smartpointer/compiletime/shared_owner/rc/rust-doc",
#   "workspace/pointers/smartpointer/compiletime/shared_owner/rc/linkedlist/packtpub",
#   "workspace/pointers/smartpointer/compiletime/shared_owner/rc/linkedlist/pnkfx",
#   "workspace/pointers/smartpointer/compiletime/shared_owner/rc/linkedlist/rust-doc",
#   "workspace/pointers/smartpointer/compiletime/shared_owner/rc/linkedlist/master-rust",
#   "workspace/pointers/smartpointer/compiletime/box/master-rust",
#   "workspace/pointers/smartpointer/compiletime/box/rust-in-action",
#   "workspace/pointers/smartpointer/compiletime/box/easy-rust",
#   "workspace/pointers/smartpointer/compiletime/box/rust-doc",
#   "workspace/pointers/smartpointer/compiletime/master-rust",
#   "workspace/pointers/rust-in-action",
#   "workspace/pointers/rust-doc",
#
#   "workspace/functional-programming/expression/rust-doc",
#   "workspace/functional-programming/closure/rust-doc",
#   "workspace/functional-programming/closure/easy-rust",
#   "workspace/functional-programming/closure/pnkfx",
#   "workspace/functional-programming/closure/master-rust",
#   "workspace/functional-programming/function/master-rust",
#   "workspace/functional-programming/function/rust-doc",
#   "workspace/functional-programming/function/rust-egg",
#   "workspace/functional-programming/lazy/master-rust",
#   "workspace/functional-programming/lazy/rust-doc",
#
#   "workspace/benchmark/other",
#   "workspace/benchmark/master-rust",
#   "workspace/benchmark/criterion/master-rust",
#   "workspace/benchmark/criterion/criterion_doc",
#
#
#   "workspace/macro/educative",
#   "workspace/macro/rust-doc",
#   "workspace/macro/rust-egg",
#   "workspace/macro/rust-in-action",
#
#
#   "workspace/module/rust-egg",
#
#
#   "workspace/data/io/io/buffer/rust-in-action",
#   "workspace/data/io/process/rust-egg",
#   "workspace/data/io/io/pipe/packtpub",
#   "workspace/data/parser/rust-in-action",
#   "workspace/data/operator/rust-in-action",
#   "workspace/data/operator/rust-doc",
#   "workspace/data/arithmetic/code-like-pro",
#   "workspace/data/arithmetic/educative",
#   "workspace/data/arithmetic/master-rust",
#
#   "workspace/grammer/dtolnay",
#
#   "workspace/time/counter/rust-in-action",
#
#
#
#
#   "workspace/process/command/packtpub",
#
#
#   "workspace/cpu/rust-in-action",
#   "workspace/cpu/rust-doc",
#
#   "workspace/env/packtpub",
#
#   "workspace/libc/code-like-pro",
#
#   "workspace/unsafe/extern-ffi/rust-doc",
#   "workspace/unsafe/safe-abstraction/rust-doc",
#   "workspace/unsafe/safe-static-mut/rust-doc",
#
#   "workspace/oop/design_patterns/behavioral/state-pattern/rust-doc",
#   "workspace/oop/design_patterns/behavioral/lpxxn",
#   "workspace/oop/design_patterns/creational/lpxxn",
#   "workspace/oop/design_patterns/structural/lpxxn",
#   "workspace/oop/design_patterns/behavioral/process/rust-egg",
#
#   "workspace/idioms/fizz_buzz",
#   "workspace/idioms/factorial/educative",
#   "workspace/idioms/math/other",
#   "workspace/brain-teaser/educative",

    "workspace/tests/test_pretty",
    "workspace/tests/test_proptest",
    "workspace/tests/test_proptest_runner",
    "workspace/tests/test_unit",
]
