[package]
name = "brain-teaser-educative_bin"
version = "0.1.0"
edition = "2021"
autobins = true

[dependencies]
num="0.4.0"
tokio="1.25.0"
#[profile.dev]
# opt-level = 1 // 1 for minimal optimization and good debugging.

[[bin]]
doc = true
name = "brain-teaser-educative-main"
path = "src/brain-teaser-educative-main.rs"
