[package]
name = "rust-in-action-memory-piston_bin"
version = "0.1.0"
edition = "2021"

[dependencies]
piston_window = "0.117"      # <1>
piston2d-graphics = "0.43"   # <2>
rand = "0.8"                 # <3>

[[bin]]
doc = true
name = "rust-in-action-memory-piston-main"
path = "src/rust-in-action-memory-piston-main.rs"
