[package]
name = "educative-macro-handling_bin"
version = "0.1.0"
edition = "2021"


[dependencies]
rand="0.8.5"
anyhow="1.0.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
doc = true
name = "educative-macro-handling-main"
path = "src/educative-macro-handling-main.rs"
