[package]
name = "rust-egg-module_bin"
version = "0.1.0"
edition = "2021"


[dependencies]
rand="0.8.5"
anyhow="1.0.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# regex = { git = "https://github.com/rust-lang/regex.git", branch = "next" }

# [dev-dependencies]
# tempdir = "0.3"

[[bin]]
doc = true
name = "rust-egg-module-main"
path = "src/rust-egg-module-main.rs"
