[package]
name = "rust-in-action-data-regex_bin"
version = "0.1.0"
edition = "2021"


[dependencies]
regex="1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

[[bin]]
doc = true
name = "rust-in-action-data-regex-main"
path = "src/rust-in-action-data-regex-main.rs"
