[package]
name = "rust-doc-error-handling_bin"
version = "0.1.0"
edition = "2021"


[dependencies]
rand="0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest="0.9.0"
error-chain = "0.12.3"


[[bin]]
doc = true
name = "rust-doc-error-handling-main"
path = "src/rust-doc-error-handling-main.rs"
