[package]
name = "mod_draw_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mod_draw_lib = { path = "../mod_draw_lib", features = ["shapes"], optional = false , default-features = false}
rgb = { version = "0.8.25", features = ["serde"], optional = false , default-features = true}


[build]
target = "stable-x86_64-unknown-linux-gnu"