[package]
name = "rust-features-language_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.english-linguistic-pkg]
version = "0.1.0"
optional = true
default-features = false
path = "english-linguistic-pkg"

[dependencies.french-linguistic-pkg]
version = "0.1.0"
optional = true
default-features = false
path = "french-linguistic-pkg"

[dependencies]
"rand" = "*"

[features]
# English package is installed by default
english = ["english-linguistic-pkg"]
french = ["french-linguistic-pkg"]

[[bin]]
doc = true
name = "main"
path = "src/main.rs"