[package]
name = "rust-in-action-memory-winapi_bin"
version = "0.1.0"
edition = "2021"


[dependencies]
kernel32-sys = "0.2.2"
winapi =  "0.3.9"
#winapi = { version = "0.3.9", features =  [
 #   "winuser",
  #  "winnt",
   # "memoryapi",
    #"processthreadsapi",
    #"sysinfoapi"
#]}


[[bin]]
doc = true
name = "rust-in-action-memory-winapi-main"
path = "src/rust-in-action-memory-winapi-main.rs"
