[package]
name = "rust-in-action-thread-unsafe_bin"
version = "0.1.0"
edition = "2021"
autobins = true

# [dependencies.rand]
# version = "0.8" # Adjust the version according to your needs
# features = ["stdrng"]

[[bin]]
doc = true
name = "rust-in-action-thread-unsafe-main"
path = "src/rust-in-action-thread-unsafe-main.rs"
