[package]
name = "mod_draw_lib"
version = "0.1.0"
authors = ["Arman Riazi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true , default-features = true}
rgb = { version = "0.8.25", features = ["serde"], optional = true , default-features = true}


[features]
default = ["shapes"]
color = ["dep:rgb"]
shapes = ["color", "dep:serde", "rgb?/serde"]

